--- a/04_JS_var_flode_DOM/muna- 04 övning/css/style.css
+++ b/04_JS_var_flode_DOM/muna- 04 övning/css/style.css
@@ -3,3 +3,13 @@
     border-color: green;
     border-style: 2px solid;
 }
+
+*{
+    background-color: blue;
+    width: 20px;
+    margin-left: auto;
+    justify-content: center;
+    text-align: justify;
+    
+}
+    
